--- a/BookifyHub/.github/workflows/deploy.yml
+++ b/BookifyHub/.github/workflows/deploy.yml
@@ -36,3 +36,6 @@ jobs:
       # Optional: Invalidate CloudFront cache
       # - name: Invalidate CloudFront
       #   run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths '/*'
+
+      - name: Check deploy.yml file
+        run: git log --oneline -- .github/workflows/deploy.yml
