--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,8 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION || 'us-east-1' }}
 
       - name: Deploy to S3
-        run: aws s3 sync ./dist/your-angular-app-name s3://bookifyadmin.s3-website-us-east-1.amazonaws.com/ --delete
+     
+        run: aws s3 sync ./dist/bookifyhub s3://bookifyadmin.s3-website-us-east-1.amazonaws.com/ --delete
         working-directory: BookifyHub
 
       # Optional: Invalidate CloudFront cache
