--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Deploy to S3
      
-        run: aws s3 sync ./dist/bookifyhub s3://bookifyadmin.s3-website-us-east-1.amazonaws.com/ --delete
+        run: aws s3 sync ./dist/bookify-hub s3://bookifyadmin.s3-website-us-east-1.amazonaws.com/ --delete
         working-directory: BookifyHub
 
       # Optional: Invalidate CloudFront cache
